--- a/dlcourse_ai/assignment1/Linear classifier.ipynb
+++ b/dlcourse_ai/assignment1/Linear classifier.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -130,10 +130,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ix (0,)\n",
-      "ix (1,)\n",
+      "Gradient check passed!\n",
+      "Gradient check passed!\n",
       "Gradient check passed!\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -143,7 +153,7 @@
     "def square(x):\n",
     "    return float(x*x), 2*x\n",
     "\n",
-    "# check_gradient(square, np.array([3.0]))\n",
+    "check_gradient(square, np.array([3.0]))\n",
     "\n",
     "def array_sum(x):\n",
     "    assert x.shape == (2,), x.shape\n",
@@ -155,7 +165,7 @@
     "    assert x.shape == (2,2)\n",
     "    return np.sum(x), np.ones_like(x)\n",
     "\n",
-    "# check_gradient(array_2d_sum, np.array([[3.0, 2.0], [1.0, 0.0]]))"
+    "check_gradient(array_2d_sum, np.array([[3.0, 2.0], [1.0, 0.0]]))"
    ]
   },
   {
@@ -180,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,13 +217,215 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Для ndarray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2.25470206e-05, 3.34627456e-03, 4.96631178e-01],\n",
+       "       [2.25470206e-05, 3.34627456e-03, 4.96631178e-01]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = np.array([[-5, 0, 5], [-5, 0, 5]])\n",
+    "target_index = np.array([[1], [1]])\n",
+    "probs = linear_classifer.softmax(X)\n",
+    "probs\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 1., 0.],\n",
+       "       [0., 1., 0.]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target_distribution = np.zeros_like(probs)\n",
+    "target_distribution[np.arange(len(target_index)), target_index.reshape(-1)] = 1\n",
+    "target_distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.        , -5.69990762, -0.        ],\n",
+       "       [-0.        , -5.69990762, -0.        ]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output = target_distribution * np.log(probs)\n",
+    "output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.8999692080356887"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output = -np.mean(output) \n",
+    "output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.006760443547122"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import log_loss\n",
+    "log_loss(target_distribution, probs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.699907624107066"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probs = linear_classifer.softmax(X)\n",
+    "linear_classifer.cross_entropy_loss(probs, target_index)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "probs = linear_classifer.softmax(np.array([-5, 0, 5]))\n",
-    "linear_classifer.cross_entropy_loss(probs, 1)"
+    "для инта"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.6689201478490405"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probs_int = linear_classifer.softmax(np.array([-5, 0, 5]))\n",
+    "target_index_int = 1\n",
+    "linear_classifer.cross_entropy_loss(probs_int, target_index_int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.335616877887714"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target_distribution_int = np.zeros_like(probs)\n",
+    "target_distribution_int[target_index_int] = 1\n",
+    "\n",
+    "log_loss(target_distribution_int, probs_int)"
    ]
   },
   {
@@ -440,7 +652,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_pred = best_classifier.predict(test_X)\n",
     "test_accuracy = multiclass_accuracy(test_pred, test_y)\n",
     "print('Linear softmax classifier test set accuracy: %f' % (test_accuracy, ))"
    ]
