--- a/dlcourse_ai/assignment2/Neural Network.ipynb
+++ b/dlcourse_ai/assignment2/Neural Network.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,13 +54,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def prepare_for_neural_network(train_X, test_X):\n",
-    "    train_flat = train_X.reshape(train_X.shape[0], -1).astype(np.float) / 255.0\n",
-    "    test_flat = test_X.reshape(test_X.shape[0], -1).astype(np.float) / 255.0\n",
+    "    train_flat = train_X.reshape(train_X.shape[0], -1).astype(float) / 255.0\n",
+    "    test_flat = test_X.reshape(test_X.shape[0], -1).astype(float) / 255.0\n",
     "    \n",
     "    # Subtract mean\n",
     "    mean_image = np.mean(train_flat, axis = 0)\n",
@@ -73,6 +73,28 @@
     "train_X, test_X = prepare_for_neural_network(train_X, test_X)\n",
     "# Split train into train and val\n",
     "train_X, train_y, val_X, val_y = random_split_train_val(train_X, train_y, num_val = 1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9000, 3072)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_X.shape"
    ]
   },
   {
@@ -90,11 +112,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gradient check passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Implement ReLULayer layer in layers.py\n",
     "# Note: you'll need to copy implementation of the gradient_check function from the previous assignment\n",
@@ -104,6 +132,28 @@
     "              ])\n",
     "\n",
     "assert check_layer_gradient(ReLULayer(), X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 3)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
    ]
   },
   {
@@ -453,7 +503,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -467,9 +517,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
